# delugekitmaker

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/deluge-audio/: Cargo.toml
crates/deluge-audio/src/: command.rs  engine.rs  lib.rs  mixer.rs  pattern.rs  peaks.rs  sample.rs  voice.rs
crates/deluge-audio/tests/: live.rs  offline.rs  scheduler.rs
crates/deluge-classify/: Cargo.toml
crates/deluge-classify/src/: lib.rs
crates/deluge-fs/: Cargo.toml
crates/deluge-fs/src/: browse.rs  import.rs  layout.rs  lib.rs  path.rs
crates/deluge-fs/tests/: integration.rs  poc.rs  save.rs
crates/deluge-xml/: Cargo.toml
crates/deluge-xml/src/: error.rs  kit.rs  lib.rs  parse.rs  write.rs
crates/deluge-xml/tests/: golden.rs  roundtrip.rs
crates/deluge-xml/tests/fixtures/: KIT_LEGACY_V2.XML
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src/lib/: api.ts  dnd.svelte.ts
src/lib/components/: AppShell.svelte  DragGhost.svelte  FileBrowser.svelte  KitList.svelte  KitTabs.svelte  Pad.svelte  PadDetail.svelte  PadGrid.svelte  SequencerStrip.svelte  StatusBar.svelte  TitleBar.svelte  TransportBar.svelte  Waveform.svelte
src/lib/stores/: app.svelte.ts
test-sd-root/KITS/: KIT_BASIC.XML
