[workspace]
members = [
    "src-tauri",
    "crates/deluge-xml",
    "crates/deluge-audio",
    "crates/deluge-fs",
    "crates/deluge-classify",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chris Goggins <chris@goggins.net.au>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quick-xml = { version = "0.36", features = ["serialize"] }
hound = "3.5"
cpal = "0.15"
crossbeam-channel = "0.5"
arc-swap = "1.7"
parking_lot = "0.12"
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha1 = "0.10"
hex = "0.4"

# Profile tweaks for the audio path
[profile.dev]
opt-level = 1  # release-ish speed for audio code even in dev

[profile.dev.package."*"]
opt-level = 3  # dependencies always compile optimized

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
