[package]
name = "deluge-kit-maker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deluge Kit Maker — drum kit builder for Synthstrom Deluge"

[lib]
name = "deluge_kit_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

deluge-xml = { path = "../crates/deluge-xml" }
deluge-fs = { path = "../crates/deluge-fs" }
deluge-classify = { path = "../crates/deluge-classify" }
deluge-audio = { path = "../crates/deluge-audio" }
uuid = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
