[package]
name = "deluge-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cpal = { workspace = true }
hound = { workspace = true }
crossbeam-channel = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
