[package]
name = "deluge-fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deluge-xml = { path = "../deluge-xml" }
serde = { workspace = true }
thiserror = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
deluge-classify = { path = "../deluge-classify" }
